--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node src/server.js",
+    "dev": "nodemon src/server.js",
+    "lint": "eslint . --ext .js",
+    "test": "jest"
   },
   "author": "Anshul",
   "license": "ISC",
@@ -17,6 +20,7 @@
     "helmet": "^8.1.0",
     "mongoose": "^9.1.5",
     "morgan": "^1.10.1",
+    "nodemon": "^3.1.11",
     "shortid": "^2.2.17"
   }
 }
